src/common/globals.scss
@font-face {
  font-family: "Karla";
  src: url("../../public/karla.ttf");
}

::-webkit-scrollbar {
  display: none;
  width: 0;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: "Karla", sans-serif;
  overscroll-behavior-y: none;
  background-color: #e8e8e8;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

button,
input,
textarea,
select {
  font-family: "Karla", sans-serif;
  outline: none;
}

select {
  border: none;
}
main {
  width: 100%;
  height: 100%;
  position: absolute;
}

img,
a {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-drag: none;
}

p {
  margin-block: 0;
}

